[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pk_common_functions"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.6"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [  'numpy>=1.14',
    'scipy',
    'astropy',
    'future-fstrings',
    "importlib_resources>=3.3.0",
    "matplotlib",
    "omegaconf",
]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/pk_common_functions"

[project.scripts]
add_bar_to_model = "pk_common_functions.add_bar_to_model:main"

[tool.hatch.version]
path = "version.py"



[tool.hatch.build.targets.sdist]
include = [
    "/pk_common_functions",
]
